emaneincdir = $(includedir)/emane/

emaneinc_HEADERS =                                  \
  emanebuildexception.h                             \
  emanecommonmacheader.h                            \
  emanecommonmacheader.inl                          \
  emanecommonmacheaderexception.h                   \
  emanecommonphyheaderantennaoption.h               \
  emanecommonphyheaderantennaoption.inl             \
  emanecommonphyheader.h                            \
  emanecommonphyheader.inl                          \
  emanecommonphyheaderexception.h                   \
  emanecommonphyheaderoption.h                      \
  emanecommonphyheaderoption.inl                    \
  emanecommonphyheaderoptionobjectstate.h           \
  emanecommonphyheaderoptionobjectstate.inl         \
  emanecomponent.h                                  \
  emanecomponent.inl                                \
  emanecomponenttypes.h                             \
  emaneconfigurationitem.h                          \
  emaneconfigurationitem.inl                        \
  emaneconfigurationrequirement.h                   \
  emaneconfigurationrequirement.inl                 \
  emaneconfigureexception.h                         \
  emaneconstants.h                                  \
  emanecontrolmessage.h                             \
  emanecontrolmessage.inl                           \
  emanedownstreamcontroltransport.h                 \
  emanedownstreampacket.h                           \
  emanedownstreampacket.inl                         \
  emanedownstreamtransport.h                        \
  emanedownstreamtransport.inl                      \
  emaneeventagent.h                                 \
  emaneeventerrorevent.h                            \
  emaneeventerrorevent.inl                          \
  emaneeventgenerator.h                             \
  emaneeventgenerator.inl                           \
  emaneevent.h                                      \
  emaneevent.inl                                    \
  emaneeventagentmanager.h                          \
  emaneeventgeneratormanager.h                      \
  emaneeventobjectstate.h                           \
  emaneeventobjectstate.inl                         \
  emaneeventreceiver.h                              \
  emaneeventserver.h                                \
  emaneeventservicehandler.h                        \
  emaneeventserviceprovider.h                       \
  emaneexception.h                                  \
  emanelogserviceprovider.h                         \
  emanemaclayerimpl.h                               \
  emanemaclayerimpl.inl                             \
  emanemactypes.h                                   \
  emanenem.h                                        \
  emanenemlayer.h                                   \
  emanenet.h                                        \
  emanepacket.h                                     \
  emanepacketinfo.h                                 \
  emanephylayerimpl.h                               \
  emanephylayerimpl.inl                             \
  emanephytypes.h                                   \
  emaneplatform.h                                   \
  emaneplatformexception.h                          \
  emaneplatformserviceprovider.h                    \
  emaneplatformserviceuser.h                        \
  emanerandomnumberserviceprovider.h                \
  emaneshimlayerimpl.h                              \
  emanestartexception.h                             \
  emanestatistic.h                                  \
  emanestatistic.inl                                \
  emanestatisticfloat.h                             \
  emanestatisticnumeric.h                           \
  emanestatisticnumeric.inl                         \
  emanestatisticserviceprovider.h                   \
  emanestatisticsignedinteger32.h                   \
  emanestatisticunsignedinteger32.h                 \
  emanetimerservicehandler.h                        \
  emanetimerserviceprovider.h                       \
  emanebuildable.h                                  \
  emanebuildable.inl                                \
  emanetransport.h                                  \
  emanetransportadapter.h                           \
  emanetransportmanager.h                           \
  emanetypes.h                                      \
  emaneupstreamcontroltransport.h                   \
  emaneupstreampacket.h                             \
  emaneupstreampacket.inl                           \
  emaneupstreamtransport.h                          \
  emaneupstreamtransport.inl                        \
  emaneantennamode.h                                \
  emanecommonphyfreqinfo.inl                        \
  emanecommonphyfreqinfo.h                          \
  emanecommonphyheadertransmitteroption.h           \
  emanecommonphyheadertransmitteroption.inl         \
  emanecommonphyheaderoptions.h                     \
  emanenemlist.h                                    \
  emanepositiongeodetic.h                           \
  emanepositiongeodetic.inl                         \
  emanevelocityvector.h                             \
  emanevelocityvector.inl                           \
  emanedirection.h                                  \
  emanedirection.inl                                \
  emanepositionneu.h


install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emaneincdir)
