emanecontrolmessagesincdir = $(includedir)/emanecontrolmessages/

emanecontrolmessagesinc_HEADERS =                               \
 controlmessages.h                                              \
 flowcontroltokenrequest.h                                      \
 flowcontroltokenresponse.h                                     \
 flowcontroltokenresponseack.h                                  \
 universalphycontrolsendmessage.h                               \
 universalphycontrolsendmessage.inl                             \
 universalphycontrolrecvmessage.h                               \
 universalphycontrolrecvmessage.inl                             \
 universalphycontrolsendmessageexception.h                      \
 universalphycontrolrecvmessageexception.h                      \
 universalphycontrolantennaprofilemessage.h                     \
 universalphycontrolantennaprofilemessage.inl                   \
 universalphycontrolantennaprofilemessageexception.h            \
 otatransmittersmessage.h                    \
 otatransmittersmessage.inl                  \
 otatransmittersmessageexception.h
 

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emanecontrolmessagesincdir)
