emaneeventsincdir = $(includedir)/emaneevents/

emaneeventsinc_HEADERS =  \
events.h                  \
locationevent.h           \
locationevent.inl         \
pathlossevent.h           \
pathlossevent.inl         \
antennaprofileevent.h     \
antennaprofileevent.inl

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emaneeventsincdir)
