emaneutilsincdir = $(includedir)/emaneutils/

emaneutilsinc_HEADERS =     \
 bitpool.h                  \
 bitpool.inl                \
 circularbuffer.h           \
 componenttypes.h           \
 factoryexception.h         \
 flowcontrol.h              \
 flowcontrol.inl            \
 flowcontrolmanager.h       \
 flowcontrolmanager.inl     \
 functor.h                  \
 netutils.h                 \
 conversionutils.h          \
 positionutils.h            \
 positionutils.inl          \
 parameterconvert.h         \
 parameterconvert.inl       \
 producerconsumerbuffer.h   \
 recvcancelable.h           \
 spawnmemberfunc.h          \
 terminator.h

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emaneutilsincdir)
