lib_LTLIBRARIES = libemane.la

INCLUDES =                             \
 -I@top_srcdir@/include

libemane_la_CXXFLAGS =  \
 $(ACE_CFLAGS)          \
 $(AM_CFLAGS)

libemane_la_SOURCES =             \
 concreteeventgeneratormanager.cc \
 eventgeneratorbuilder.cc         \
 eventgeneratorfactory.cc         \
 eventgeneratorfactorymanager.cc  \
 concreteeventagentmanager.cc     \
 eventagentbuilder.cc             \
 eventagentfactory.cc             \
 eventagentfactorymanager.cc      \
 concretetransportadapter.cc      \
 concretetransportmanager.cc      \
 transportbuilder.cc              \
 transportfactory.cc              \
 transportfactorymanager.cc       \
 componentmap.cc                  \
 concretenem.cc                   \
 concreteplatform.cc              \
 debugport.cc                     \
 eventservice.cc                  \
 layerfactorymanager.cc           \
 logger.cc                        \
 logservice.cc                    \
 logserviceproxy.cc               \
 maclayer.cc                      \
 nembuilder.cc                    \
 nemlayerstack.cc                 \
 nemlayerstate.cc                 \
 nemlayerstateconfigured.cc       \
 nemlayerstatedestroyed.cc        \
 nemlayerstateinitialized.cc      \
 nemlayerstaterunning.cc          \
 nemlayerstatestopped.cc          \
 nemlayerstateuninitialized.cc    \
 nemnetworkadapter.cc             \
 nemotaadapter.cc                 \
 nemqueuedlayer.cc                \
 nemstatefullayer.cc              \
 otamanager.cc                    \
 phylayer.cc                      \
 platformservice.cc               \
 shimlayer.cc                     \
 statisticsmanager.cc             \
 timerservice.cc


EXTRA_DIST=                      \
 concreteeventgeneratormanager.h \
 eventgeneratorfactory.h         \
 eventgeneratorfactorymanager.h  \
 concreteeventagentmanager.h     \
 eventagentfactory.h             \
 eventagentfactorymanager.h      \
 eventserviceexception.h         \
 concretetransportadapter.h      \
 concretetransportmanager.h      \
 transportfactory.h              \
 transportfactorymanager.h       \
 componentmap.h                  \
 componentmapentries.h           \
 componentmapexception.h         \
 concretenem.h                   \
 concreteplatform.h              \
 debugport.h                     \
 eventservice.h                  \
 eventservicemessage.h           \
 layerfactory.h                  \
 layerfactory.inl                \
 layerfactorymanager.h           \
 logservice.h                    \
 logserviceproxy.h               \
 logmessage.h                    \
 maclayer.h                      \
 nemlayerstack.h                 \
 nemlayerstateconfigured.h       \
 nemlayerstatedestroyed.h        \
 nemlayerstate.h                 \
 nemlayerstateinitialized.h      \
 nemlayerstaterunning.h          \
 nemlayerstatestopped.h          \
 nemlayerstateuninitialized.h    \
 nemnetworkadapter.h             \
 networkadapterexception.h       \
 nemotaadapter.h                 \
 nemqueuedlayer.h                \
 nemstatefullayer.h              \
 netadaptermessage.h             \
 otaexception.h                  \
 otamanager.h                    \
 otamanagermessage.h             \
 otaprovider.h                   \
 otauser.h                       \
 phylayer.h                      \
 platformservice.h               \
 shimlayer.h                     \
 statisticsmanager.h             \
 timerserviceexception.h         \
 timerservice.h

libemane_la_LIBADD=              \
 $(WIN32_EXTRA_LIBADD)

libemane_la_LDFLAGS=     \
 $(WIN32_EXTRA_LDFLAGS)  \
 $(ACE_LIBS)             
